# rmg-ident

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md
.github/workflows/: release-plz.yml  test.yml
src/: lib.rs
tests/: ident_test.rs
